--- a/docker/docker-compose-staging.yml
+++ b/docker/docker-compose-staging.yml
@@ -346,7 +346,7 @@ services:
 
 
  vachan-ai:
-    image: vachanengine/vachan-ai:0.0.0-alpha.8
+    image: vachanengine/vachan-ai:0.0.0-alpha.13
     healthcheck:
      timeout: 45s
      interval: 10s
@@ -389,7 +389,7 @@ services:
      - VACHAN_AI_CRON_HOUR=${VACHAN_AI_CRON_HOUR:-12}
      - VACHAN_AI_CRON_MINUTE=${VACHAN_AI_CRON_MINUTE:-30}
      - VACHAN_AI_BASEPATH=/v2/ai
-     - VACHAN_DOMAIN=${VACHAN_DOMAIN:-http://vachan-access:8007}
+     - VACHAN_DOMAIN=http://vachan-access:8007
      - VACHAN_AI_DOMAIN=http://vachan-api
     command: uvicorn main:app --host 0.0.0.0 --port 8009
     volumes:
@@ -418,7 +418,7 @@ services:
 
 
  worker:
-    image: vachanengine/vachan-ai:0.0.0-alpha.8
+    image: vachanengine/vachan-ai:0.0.0-alpha.13
     healthcheck:
      timeout: 45s
      interval: 10s
