--- a/docker/docker-compose-production.yml
+++ b/docker/docker-compose-production.yml
@@ -345,7 +345,7 @@ services:
      - VE-network
 
  vachan-ai:
-    image: vachanengine/vachan-ai:0.0.0-alpha.13
+    image: vachanengine/vachan-ai:0.0.0-alpha.14
     healthcheck:
      timeout: 45s
      interval: 10s
@@ -388,6 +388,7 @@ services:
      - VACHAN_AI_CRON_HOUR=${VACHAN_AI_CRON_HOUR:-12}
      - VACHAN_AI_CRON_MINUTE=${VACHAN_AI_CRON_MINUTE:-30}
      - VACHAN_AI_BASEPATH=/v2/ai
+     - VACHAN_USE_VE_AUTH=${VACHAN_USE_VE_AUTH:-True}
      - VACHAN_DOMAIN=http://vachan-access:8007
      - VACHAN_AI_DOMAIN=http://vachan-api
     command: uvicorn main:app --host 0.0.0.0 --port 8009
@@ -417,7 +418,7 @@ services:
 
 
  worker:
-    image: vachanengine/vachan-ai:0.0.0-alpha.13
+    image: vachanengine/vachan-ai:0.0.0-alpha.14
     healthcheck:
      timeout: 45s
      interval: 10s
@@ -434,6 +435,7 @@ services:
      - VACHAN_AI_DATA_PATH=${VACHAN_AI_DATA_PATH:-/home/gitautodeploy/vachan_ai_data}
      - VACHAN_AI_SERVED_MODEL_URI=${VACHAN_AI_SERVED_MODEL_URI:-http://dov2prodconn.bridgeconn.com:8085/v2/models}
      - VACHAN_AI_MLSERVER_REQUEST_TIMEOUT=120
+     - VACHAN_USE_VE_AUTH=${VACHAN_USE_VE_AUTH:-True}
      - PYTHONPATH=/app/app/core/model_access/ai_model_core.py:/app/app/core/cloud_operations
     command: rq worker --url redis://:${VACHAN_REDIS_PASS}@redis:6379
     links:
