AWS env variables adding

--- a/docker/docker-compose-staging.yml
+++ b/docker/docker-compose-staging.yml
@@ -367,7 +367,8 @@ services:
      - VACHAN_AI_AWS_SECRET_ACCESS_KEY=${VACHAN_AI_AWS_SECRET_ACCESS_KEY}
      - VACHAN_AI_S3_BUCKET=${VACHAN_AI_S3_BUCKET}
      - VACHAN_AI_AWS_ACCOUNT_REGION=${VACHAN_AI_AWS_ACCOUNT_REGION}
-     
+     - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
+     - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 
      - VACHAN_AI_DATA_PATH=${VACHAN_AI_DATA_PATH:-/home/gitautodeploy/vachan_ai_data}
      - VACHAN_AI_LOGGING_LEVEL=INFO
