--- a/docker/docker-compose-staging.yml
+++ b/docker/docker-compose-staging.yml
@@ -338,7 +338,7 @@ services:
      - VE-network
 
  vachan-ai:
-    image: vachanengine/vachan-ai:0.0.0-alpha.14
+    image: vachanengine/vachan-ai:0.0.0-alpha.15
     healthcheck:
      timeout: 45s
      interval: 10s
@@ -377,6 +377,7 @@ services:
      - VACHAN_AI_MLSERVER_REQUEST_TIMEOUT=120
      - PYTHONPATH=/app/app/core/model_access/ai_model_core.py:/app/app/core/cloud_operations
      - VACHAN_REDIS_PASS=${VACHAN_REDIS_PASS:-vsfrgetd}
+     - VACHAN_AI_DFNT_SAMPLING_RATE=${VACHAN_AI_DFNT_SAMPLING_RATE:-48000}
      - VACHAN_AI_DELETION_PERIOD=${VACHAN_AI_DELETION_PERIOD:-14}
      - VACHAN_AI_CRON_DAY=${VACHAN_AI_CRON_DAY:-MON}
      - VACHAN_AI_CRON_HOUR=${VACHAN_AI_CRON_HOUR:-12}
@@ -412,7 +413,7 @@ services:
 
 
  worker:
-    image: vachanengine/vachan-ai:0.0.0-alpha.14
+    image: vachanengine/vachan-ai:0.0.0-alpha.15
     healthcheck:
      timeout: 45s
      interval: 10s
@@ -427,6 +428,7 @@ services:
      - VACHAN_POSTGRES_SCHEMA=${VACHAN_POSTGRES_SCHEMA:-aischema}
      - VACHAN_POSTGRES_PORT=5432
      - VACHAN_USE_VE_AUTH=${VACHAN_USE_VE_AUTH:-True}
+     - VACHAN_AI_DFNT_SAMPLING_RATE=${VACHAN_AI_DFNT_SAMPLING_RATE:-48000}
      - VACHAN_AI_DATA_PATH=${VACHAN_AI_DATA_PATH:-/home/gitautodeploy/vachan_ai_data}
      - VACHAN_AI_SERVED_MODEL_URI=${VACHAN_AI_SERVED_MODEL_URI:-http://dov2prodconn.bridgeconn.com:8085/v2/models}
      - VACHAN_AI_MLSERVER_REQUEST_TIMEOUT=120
