--- a/docker/docker-compose-staging.yml
+++ b/docker/docker-compose-staging.yml
@@ -384,6 +384,7 @@ services:
      - VACHAN_AI_CRON_MINUTE=${VACHAN_AI_CRON_MINUTE:-30}
      - VACHAN_AI_BASEPATH=/v2/ai
      - VACHAN_USE_VE_AUTH=${VACHAN_USE_VE_AUTH:-True}
+     - VACHAN_AI_MLFLOW_DST_PATH=${VACHAN_AI_MLFLOW_DST_PATH:-/var/common/mlflow}
      - VACHAN_DOMAIN=http://vachan-access:8007
      - VACHAN_AI_DOMAIN=http://vachan-api
     command: uvicorn main:app --host 0.0.0.0 --port 8009
